[package]
name = "paste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
askama = "0.10"
serde = "1"
serde_json = "1"
once_cell = "*"
chrono = { version = "0.4", features = ["serde"] }